Fragment trouble with data across Fragments and Activities

--- a/Social Calc/res/layout/main.xml
+++ b/Social Calc/res/layout/main.xml
@@ -2,6 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@color/black" >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableBottom="@color/grey"
+        android:text="@string/request"
+        android:textColor="@color/grey"
+        android:textSize="@dimen/calc_bar" />
 
 </LinearLayout>
