--- a/Social Calc/res/layout/settings.xml
+++ b/Social Calc/res/layout/settings.xml
@@ -4,4 +4,10 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
 </LinearLayout>
