--- a/Social Calc/res/layout-port/main.xml
+++ b/Social Calc/res/layout-port/main.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:background="@color/black" >
     <TextView
+        android:id="@+id/calc_bar"
         android:singleLine="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
