--- a/Social Calc/res/layout-port/main.xml
+++ b/Social Calc/res/layout-port/main.xml
@@ -19,6 +19,7 @@
         android:layout_height="@dimen/delete_bar"
         android:orientation="horizontal" >
         <Button
+            android:onClick="onShareClick"
             android:layout_height="match_parent"
             android:layout_width="fill_parent"
             android:layout_weight="1"
@@ -34,6 +35,7 @@
             android:text="@string/more"
             android:background="@color/button_grey" />
         <Button
+            android:id="@+id/deleteButton"
             android:layout_height="match_parent"
             android:layout_width="fill_parent"
             android:text="@string/delete"
