--- a/Social Calc/res/layout/main.xml
+++ b/Social Calc/res/layout/main.xml
@@ -1,15 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/black" >
+    android:gravity="center_horizontal"
+    android:background="@color/button_grey" >
     <TextView
+        android:id="@+id/calc_bar"
+        android:singleLine="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableBottom="@color/grey"
-        android:text="@string/request"
+        android:text="@string/start_calc"
         android:textColor="@color/grey"
-        android:textSize="@dimen/calc_bar" />
-
+        android:textSize="@dimen/calc_bar_land"
+        android:gravity="right"
+        android:maxLength="10"
+        android:background="@color/black" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/delete_bar"
+        android:orientation="horizontal" >
+        <Button
+            android:onClick="onShareClick"
+            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:text="@string/share"
+            android:background="@color/button_grey" />
+        <Button
+            android:id="@+id/moreButton"
+            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:text="@string/more"
+            android:background="@color/button_grey" />
+        <Button
+            android:id="@+id/deleteButton"
+            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:text="@string/delete"
+            android:layout_weight="1"
+            android:onClick="onDeleteClick"
+            android:textColor="@color/white"
+            android:background="@color/button_grey" />
+    </LinearLayout>
+    <fragment
+    	android:name="com.advancementbureau.socialcalc.SocialCalcActivity$ArithmeticFragment"
+        android:id="@+id/arithmeticFragment"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent" ></fragment>
+    <fragment
+    	android:name="com.advancementbureau.socialcalc.SocialCalcActivity$AdvancedFragment"
+        android:id="@+id/advancedFragment"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent" ></fragment>
 </LinearLayout>
