--- a/Social Calc/res/values/dimens.xml
+++ b/Social Calc/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="calc_bar">50dp</dimen>
+    <dimen name="calc_bar_land">40dp</dimen>
     <dimen name="delete_bar">45dp</dimen>
     <dimen name="button_text">35dp</dimen>
+    <dimen name="text">16dp</dimen>
 </resources>
