--- a/Social Calc/res/layout/settings.xml
+++ b/Social Calc/res/layout/settings.xml
@@ -3,7 +3,10 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+	<ImageView
+	    android:layout_width="match_parent"
+	    android:layout_height="@dimen/bar"
+	    android:src="@color/button_grey" />
     
 
 </LinearLayout>
