--- a/Social Calc/res/values/dimens.xml
+++ b/Social Calc/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="delete_bar">45dp</dimen>
     <dimen name="button_text">35dp</dimen>
     <dimen name="text">16dp</dimen>
+    <dimen name="bar">4dp</dimen>
 </resources>
