--- a/Social Calc/res/layout/share_dialog.xml
+++ b/Social Calc/res/layout/share_dialog.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/layout_root"
     android:orientation="vertical" >
 
     <TextView
@@ -13,31 +14,32 @@
 
     <Spinner
         android:id="@+id/PreText_Spinner"
-        android:entries="@array/genders"
+        android:entries="@array/pre_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/ShareTextPrompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="@string/share_text_prompt" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/ShareText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="@string/network_prompt" />
 
     <Spinner
-        android:id="@+id/spinner2"
+        android:id="@+id/Network_Spinner"
         android:layout_width="match_parent"
+        android:entries="@array/network"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
