--- a/Social Calc/res/values/arrays.xml
+++ b/Social Calc/res/values/arrays.xml
@@ -10,4 +10,10 @@
         <item>@string/twitter</item>
         <item>@string/more_to_come</item>
     </string-array>
+    <string-array name="decimal">
+        <item>@string/three</item>
+        <item>@string/four</item>
+        <item>@string/five</item>
+        <item>@string/six</item>
+    </string-array>
 </resources>
