--- a/Social Calc/res/xml/preferences.xml
+++ b/Social Calc/res/xml/preferences.xml
@@ -3,8 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-            android:title="@string/math"
-            android:icon="@drawable/math" >
+            android:title="@string/math" >
 
         <SwitchPreference
 	        android:key="switch_rad_deg"
